[project]
name = "langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.26.2",
    "langchain-huggingface>=0.1.2",
    "langchain>=0.3.7",
    "pydantic>=2.9.2",
    "langgraph>=0.2.53",
    "pyowm>=3.3.0",
    "langchain-community>=0.3.7",
    "requests>=2.32.3",
    "langchainhub>=0.1.21",
    "langchain-google-genai>=2.0.6",
]
